# impress_voice_input

./: .gitignore  CMakeLists.txt  LICENSE  PRD.md  README.md  build-linux.sh  build-win.sh  package-linux.sh  run.sh
cmake/: dependencies.cmake  mingw-toolchain.cmake
configs/: default_config.json
gnome-extension/io.impress.voice-input-hotkey@impress/: extension.js  metadata.json
src/: main.cpp
src/app/: application.cpp  application.h  config_manager.cpp  config_manager.h
src/audio/: audio_capture.cpp  audio_capture.h  audio_decoder.cpp  audio_decoder.h  audio_ring_buffer.cpp  audio_ring_buffer.h  streaming_audio_writer.cpp  streaming_audio_writer.h
src/core/: audio_processor.cpp  audio_processor.h  caps_lock_backend.cpp  caps_lock_backend.h  caps_lock_evdev.cpp  caps_lock_evdev.h  caps_lock_voice_hotkey.cpp  caps_lock_voice_hotkey.h  caps_lock_xcb.cpp  caps_lock_xcb.h  decoder.cpp  decoder.h  mac_hotkey.cpp  mac_hotkey.h  mac_text_injector.cpp  mac_text_injector.h  mel_spectrogram.cpp  mel_spectrogram.h  ort_api_shim.h  ort_minimal.cpp  ort_minimal.h  sense_voice_cmvn.h  sense_voice_engine.cpp  sense_voice_engine.h  sense_voice_features.cpp  sense_voice_features.h  sense_voice_tokenizer.cpp  sense_voice_tokenizer.h  stt_engine.cpp  stt_engine.h  tokenizer.cpp  tokenizer.h  vad.cpp  vad.h  voice_input_service.cpp  voice_input_service.h  wayland_text_injector.cpp  wayland_text_injector.h  whisper_tokenizer.cpp  whisper_tokenizer.h  (+4 more)
src/ui/: file_transcribe_page.cpp  file_transcribe_page.h  main_window.cpp  main_window.h  settings_page.cpp  settings_page.h  stt_test_page.cpp  stt_test_page.h
src/ui/resources/styles/: main.qss  main_dark.qss  styles.qrc
src/ui/widgets/: audio_waveform.cpp  audio_waveform.h  hotkey_recorder.cpp  hotkey_recorder.h  progress_panel.cpp  progress_panel.h  recording_indicator.cpp  recording_indicator.h  text_output.cpp  text_output.h
src/utils/: logger.cpp  logger.h  string_utils.cpp  string_utils.h  timer.cpp  timer.h
static/: index.html
tests/: CMakeLists.txt  test_audio_processor.cpp  test_mel_spectrogram.cpp  test_vad.cpp  test_whisper_tokenizer.cpp
